# Audiolize

./: README.md  io.bricksigma.Audiolize.json  meson.build
data/: io.bricksigma.Audiolize.desktop.in  io.bricksigma.Audiolize.gschema.xml  io.bricksigma.Audiolize.metainfo.xml.in  io.bricksigma.Audiolize.service.in  meson.build
data/icons/: meson.build
modules/: fftw.json  portaudio.json
po/: POTFILES.in  meson.build
src/: audiolize-application.c  audiolize-application.h  audiolize-window.c  audiolize-window.h  audiolize-window.ui  audiolize.gresource.xml  main.c  meson.build
src/audio-driver/: audio-driver.c  audio-driver.h
src/fft/: fft.c  fft.h
